# Assistencia-Pro

./: .env.example  README.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  main.cjs  metadata.json  package-lock.json  package.json  vercel.json  vite.config.ts
public/: manifest-admin.json  manifest-motoboy.json  manifest.json  sw.js
src/: App.tsx  constants.ts  db.ts  firebase.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Button.tsx  ConnectionStatus.tsx  ErrorBoundary.tsx  Layout.tsx  PWAManager.tsx  PWAUpdateNotification.tsx  PixQRCodeModal.tsx
src/contexts/: AuthContext.tsx  SettingsContext.tsx
src/lib/: pix.ts  tauri-db.ts
src/pages/: AccessLogs.tsx  CashClosure.tsx  Customers.tsx  Dashboard.tsx  DeliveryManagement.tsx  DeliverySettings.tsx  Expenses.tsx  Inventory.tsx  Landing.tsx  Login.tsx  MotoboyDashboard.tsx  MotoboyLogin.tsx  PublicStorefront.tsx  Sales.tsx  ServiceOrders.tsx  Settings.tsx  ShoppingList.tsx  StorefrontManager.tsx  StorefrontOrders.tsx
src/services/: n8nService.ts  syncService.ts
src/utils/: masks.ts  whatsapp.ts
